--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
@@ -1,4 +1,4 @@
-<basic-pin *ngIf="product.properties as properties"
+<basic-pin *ngIf="product?.properties as properties"
   [link]="link"
   [product]="product"
   [title]="title">
