--- a/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
+++ b/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
@@ -2,10 +2,14 @@
     [link]="link"
     [product]="product"
     [title]="title">
-  <shared-beachball
+
+  <figure>
+    <shared-beachball
       [fillColor]="'#ffaa69'"
       [labelAxes]="false"
       [labelPlanes]="false"
       [tensor]="tensor">
-  </shared-beachball>
+    </shared-beachball>
+  </figure>
+
 </basic-pin>
