--- a/src/app/executive/tsunami-pin/tsunami-pin.component.html
+++ b/src/app/executive/tsunami-pin/tsunami-pin.component.html
@@ -1,12 +1,17 @@
-<basic-pin [href]="href" [title]="title" [footer]="footer" >
-  <div>
+<basic-pin
+  [href]="href"
+  [title]="title"
+  [footer]="footer">
+
+  <figure>
     <img src="./assets/tsunami.jpg" alt="Tsunami Warning Center"
         class="tsunami-logo" />
-    <small>
+    <p>
       To view any current tsunami advisories for this and other events please
       visit <a href="https://www.tsunami.gov/" class="tsunami-link">
       https://www.tsunami.gov</a>.
-    </small>
-  </div>
+    </p>
+  </figure>
+
 </basic-pin>
 
