Update dt styles for all pins

--- a/src/app/executive/basic-pin/basic-pin.component.scss
+++ b/src/app/executive/basic-pin/basic-pin.component.scss
@@ -33,6 +33,10 @@ basic-pin {
     & > :first-child {
       margin-top: 0;
     }
+
+    > dl > dt {
+      font-weight: bold;
+    }
   }
 
   footer {
