--- a/src/app/executive/nearby-seismicity-pin/nearby-seismicity-pin.component.scss
+++ b/src/app/executive/nearby-seismicity-pin/nearby-seismicity-pin.component.scss
@@ -5,12 +5,12 @@ dd {
 figure {
   display: flex;
   flex-direction: row;
-  margin: 0.25em 0 1em;
+  margin: 0.25em 0 0.5em;
 
   > img {
     width: 35px;
     height: 35px;
-    margin: 0 0.5em 0 0.25em
+    margin: 0 1em 0 0.5em;
   }
 
   > figcaption {
