--- a/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
+++ b/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
@@ -10,6 +10,7 @@
       [labelPlanes]="false"
       [tensor]="tensor">
     </shared-beachball>
+    <figcaption>Beachball Diagram</figcaption>
   </figure>
 
 </basic-pin>
