--- a/src/app/executive/tsunami-pin/tsunami-pin.component.html
+++ b/src/app/executive/tsunami-pin/tsunami-pin.component.html
@@ -6,12 +6,16 @@
   <figure>
     <img src="./assets/tsunami.jpg" alt="Tsunami Warning Center"
         class="tsunami-logo" />
-    <p>
-      To view any current tsunami advisories for this and other events please
-      visit <a href="https://www.tsunami.gov/" class="tsunami-link">
-      https://www.tsunami.gov</a>.
-    </p>
+    <figcaption>
+      U.S. Tsunami Warning System
+    </figcaption>
   </figure>
+
+  <p>
+    To view any current tsunami advisories for this and other events please
+    visit <a href="https://www.tsunami.gov/" class="tsunami-link">
+    https://www.tsunami.gov</a>.
+  </p>
 
 </basic-pin>
 
