--- a/src/app/shared/alert-level/alert-level.component.html
+++ b/src/app/shared/alert-level/alert-level.component.html
@@ -1,4 +1,4 @@
-<span class="mmi pager-alertlevel-{{alertLevel}}">
+<span *ngIf="alertLevel" class="mmi pager-alertlevel-{{alertLevel}}">
   <span class="roman">
     <strong>{{alertLevel | uppercase}}</strong>
   </span>
