fixed pin alignments and figcaption font

--- a/src/app/executive/dyfi-pin/dyfi-pin.component.html
+++ b/src/app/executive/dyfi-pin/dyfi-pin.component.html
@@ -15,6 +15,7 @@
       product?.properties?.eventsourcecode + '_ciim_geo.jpg'
       let image; else empty">
     <img src="{{ image.url }}" alt="DYFI Intensity Map" />
+    <figcaption>Community Internet Intensity Map</figcaption>
   </figure>
 
   <ng-template #empty>
