--- a/src/app/executive/moment-tensor-pin/moment-tensor-pin.component.html
+++ b/src/app/executive/moment-tensor-pin/moment-tensor-pin.component.html
@@ -8,6 +8,7 @@
       [fillColor]="'#6ea8ff'"
       [labelAxes]="false"
       [labelPlanes]="false"
+      [size]="138"
       [tensor]="tensor">
     </shared-beachball>
     <figcaption>Beachball Diagram</figcaption>
