--- a/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
+++ b/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
@@ -8,6 +8,7 @@
       [fillColor]="'#ffaa69'"
       [labelAxes]="false"
       [labelPlanes]="false"
+      [size]="200"
       [tensor]="tensor">
     </shared-beachball>
     <figcaption>Beachball Diagram</figcaption>
