--- a/src/app/executive/pager-pin/pager-pin.component.html
+++ b/src/app/executive/pager-pin/pager-pin.component.html
@@ -17,7 +17,7 @@
 
   <figure>
     <img class="alert-histogram"
-         src="{{product.contents['alertfatal_smaller.png'].url}}"
+         src="{{product?.contents['alertfatal_smaller.png']?.url}}"
          alt="Fatality Alert Histogram" />
     <figcaption>Estimated Fatalities</figcaption>
   </figure>
