--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.scss
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.scss
@@ -1,10 +1,10 @@
 dd {
-  margin: 0;
+  margin-left: 0;
 
   figure {
     display: flex;
     flex-direction: row;
-    margin: 0.25em 0 0.5em;
+    margin: 0;
 
     > .svg-wrapper {
       display: flex;
