--- a/src/app/executive/nearby-seismicity-pin/nearby-seismicity-pin.component.scss
+++ b/src/app/executive/nearby-seismicity-pin/nearby-seismicity-pin.component.scss
@@ -1,21 +1,21 @@
 dd {
-  margin: 0;
-}
+  margin-left: 0;
 
-figure {
-  display: flex;
-  flex-direction: row;
-  margin: 0.25em 0 0.5em;
-
-  > img {
-    width: 35px;
-    height: 35px;
-    margin: 0 1em 0 0.5em;
-  }
-
-  > figcaption {
+  figure {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    margin: 0;
+
+    > img {
+      width: 35px;
+      height: 35px;
+      margin: 0 1em 0 0.5em;
+    }
+
+    > figcaption {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
   }
 }
