--- a/src/app/event-page/header/header.component.html
+++ b/src/app/event-page/header/header.component.html
@@ -1,4 +1,8 @@
 <header>
+  <p class="alert info">
+    BETA - <a href="mailto:gs-haz_dev_team_group@usgs.gov">Provide Feedback</a>
+  </p>
+
   <h1>{{ event | eventTitle }}</h1>
 
   <ul *ngIf="event?.id">
