updated pin components to show lighter headings, switched oaf pin components around, and changed figcaptions on all beach ball components

--- a/src/app/executive/basic-pin/basic-pin.component.scss
+++ b/src/app/executive/basic-pin/basic-pin.component.scss
@@ -45,7 +45,8 @@ basic-pin {
         margin-top: 0.25em;
       }
       > dt {
-        font-weight: bold;
+        color: #777;
+        font-size: 0.88em;
       }
     }
 
