--- a/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
+++ b/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
@@ -11,7 +11,7 @@
       [size]="200"
       [tensor]="tensor">
     </shared-beachball>
-    <figcaption>Beachball Diagram</figcaption>
+    <figcaption>Fault Plane Solution</figcaption>
   </figure>
 
 </basic-pin>
