added BetaPinView and styles for BetaPinView

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -30,6 +30,7 @@
 
 /* Project styles */
 @import 'core/_BasicPinView.scss';
+@import 'core/_BetaPinView.scss';
 @import 'core/_DownloadView.scss';
 @import 'core/_Formatter.scss';
 @import 'core/_Module.scss';
