Improve contrast ratios for mmi bubbles

--- a/src/app/shared/css/mmi-colors.scss
+++ b/src/app/shared/css/mmi-colors.scss
@@ -22,12 +22,11 @@ $mmiVI-text-color: #000000;
 $mmiVII-text-color: #000000;
 $mmiVIII-text-color: #000000;
 $mmiIX-text-color: #000000;
-$mmiX-text-color: #000000;
-$mmiXI-text-color: #000000;
-$mmiXII-text-color: #000000;
+$mmiX-text-color: #ffffff;
+$mmiXI-text-color: #ffffff;
+$mmiXII-text-color: #ffffff;
 
 .mmiI {
-  box-shadow: inset 0 0 1px #666;
   color: $mmiI-text-color !important;
   background-color: $mmiI !important;
 }
