--- a/src/app/shared/bubble/bubble.component.css
+++ b/src/app/shared/bubble/bubble.component.css
@@ -7,17 +7,15 @@
 :host.border {
   border-radius: 2px;
   box-shadow: inset 0 0 1px rgba(0,0,0,.5);
-  padding: .5em 0;
+  padding: 0.5em 0;
   text-shadow: 1px 1px 0 hsla(0,0%,100%,.3);
 }
 
 span {
   display: block;
   max-width: 100%;
-  color: #000;
 }
 
 abbr {
-  color: #666;
-  font-size: .8em;
+  font-size: 0.77em;
 }
