--- a/src/app/dyfi/dyfi/dyfi.component.html
+++ b/src/app/dyfi/dyfi/dyfi.component.html
@@ -11,7 +11,7 @@
     </a>
   </ng-container>
 
-  <ng-container>
+  <ng-container *ngIf="eventService.product$ | async">
   <!-- routes/components in ../origin-routing.module.ts -->
     <mdc-tab-bar-scroller>
       <mdc-tab-bar-scroll-back>
