--- a/src/app/shakemap/shakemap/shakemap.component.html
+++ b/src/app/shakemap/shakemap/shakemap.component.html
@@ -14,30 +14,29 @@
       <mdc-tab-bar-scroll-frame>
         <!-- routes/components in ../origin-routing.module.ts -->
         <nav mdc-tab-bar>
-          <a *ngIf="shakemap?.contents['download/cont_mi.json'] ||
-              shakemap?.contents['download/intensity.jpg']"
+          <a *ngIf="shakemap | sharedProductContent:
+              'download/cont_mi.json':'download/intensity.jpg'"
               mdc-tab mdcRouter [routerLink]="'./intensity'"
               queryParamsHandling="preserve">
             Intensity
           </a>
-          <a *ngIf="shakemap?.contents['download/cont_pga.json'] ||
-              shakemap?.contents['download/pga.jpg']"
+          <a *ngIf="shakemap | sharedProductContent:
+              'download/cont_pga.json':'download/pga.jpg'"
               mdc-tab mdcRouter [routerLink]="'./pga'"
               queryParamsHandling="preserve">
             <abbr title="Peak Ground Acceleration">PGA</abbr>
           </a>
-          <a *ngIf="shakemap?.contents['download/cont_pgv.json'] ||
-              shakemap?.contents['download/pgv.jpg']"
+          <a *ngIf="shakemap | sharedProductContent:
+              'download/cont_pgv.json':'download/pgv.jpg'"
               mdc-tab mdcRouter [routerLink]="'./pgv'"
               queryParamsHandling="preserve">
             <abbr title="Peak Ground Velocity">PGV</abbr>
           </a>
-          <a *ngIf="shakemap?.contents['download/cont_psa03.json'] ||
-              shakemap?.contents['download/cont_psa10.json'] ||
-              shakemap?.contents['download/cont_psa30.json'] ||
-              shakemap?.contents['download/psa03.jpg'] ||
-              shakemap?.contents['download/psa10.jpg'] ||
-              shakemap?.contents['download/psa30.jpg']"
+          <a *ngIf="shakemap | sharedProductContent:
+              'download/cont_psa03.json':'download/cont_psa10.json':
+              'download/cont_psa30.json':'download/cont_psa0p3.json':
+              'download/cont_psa1p0.json':'download/cont_psa3p0.json':
+              'download/psa03.jpg':'download/psa10.jpg':'download/psa30.jpg'"
               mdc-tab mdcRouter [routerLink]="'./psa'"
               queryParamsHandling="preserve">
             <abbr title="Peak Spectral Acceleration">PSA</abbr>
@@ -50,7 +49,8 @@
               queryParamsHandling="preserve">
             Station List
           </a>
-          <a *ngIf="shakemap?.contents['download/urat_pga.jpg']"
+          <a *ngIf="shakemap | sharedProductContent:
+              'download/urat_pga.jpg':'download/sd.jpg'"
               mdc-tab mdcRouter [routerLink]="'./uncertainty'"
               queryParamsHandling="preserve">
             Uncertainty
